client/src/components/Card.module.scss
$border-radius-size: 14px;
$accent-color: lime;

.cardContainer {
  width: 100%;
}

.card {
  position: relative;
  background: #fafafa;
  text-align: center;
  border-radius: $border-radius-size + 5;
  box-shadow: -1px 15px 30px -12px black;
  height: 100%;
  display: flex;
  flex-direction: column;
  font-size: 0.85em;

  .image {
    position: relative;
    height: 7em;
    margin-bottom: 1em;
    border-top-left-radius: $border-radius-size;
    border-top-right-radius: $border-radius-size;
    background: url('./cardImg/card-bg.jpg');
    background-size: cover;

    img {
      width: 100%;
      max-width: 13em;
      position: absolute;
      top: -3.4em;
      left: 0;
      right: 0;
      margin: auto;
      filter: drop-shadow(12px 12px 25px rgba(0, 0, 0, 0.5));
    }
  }

  .name {
    font-size: 1.7em;
    font-weight: 900;
    padding: 0 0.35em;
  }

  .subtitle {
    font-size: 1.4em;
    font-weight: 900;
    opacity: 0.97;
    text-shadow: 1px 2px 5px rgba(0, 0, 0, 0.08);
    font-family: "Roboto";
  }

  .description {
    padding: 0.5em;
    flex-grow: 1;
    white-space: pre-wrap;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .input {
    display: block;
    border: none;
    border-radius: 0.3em;
    font-size: 1.2em;
    padding: 0.3em 0.75em;
    line-height: 1;
    background-color: #fafafa;
    color: $accent-color;
    font-weight: 900;
    margin: 0.5em auto;
    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4);
    letter-spacing: 0.05em;
    width: 80%;

    &:disabled {
      opacity: 0.4;
    }
  }

  .button {
    display: block;
    border: none;
    border-radius: 0.3em;
    font-size: 1.2em;
    padding: 0.3em 0.75em;
    line-height: 1;
    background-color: #fafafa;
    color: $accent-color;
    font-weight: 900;
    margin: 0.5em auto;
    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4);
    letter-spacing: 0.05em;

    &:disabled {
      opacity: 0.4;
    }
  }

  .accentBg {
    font-weight: 700;
    border-bottom-left-radius: $border-radius-size;
    border-bottom-right-radius: $border-radius-size;
    background: $accent-color;
  }
}

.statContainer {
  background-color: #fafafa;
  box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, 0.3);
  color: #272742;
  margin: 0.5em;
  border-radius: 0.3em;
  display: flex;
  flex-direction: row;
  align-items: center;
  font-size: 1.25em;

  .statIcon {
    display: inline-block;
    background-color: rgba(0, 0, 30, 0.6);
    border-radius: 0.15em;
    font-size: 1.7em;
    width: 1em;
    height: 1em;
    margin: 0.15em;
    margin-right: 0.3em;

    img {
      width: 1em;
      height: 1em;
    }
  }

  .statsText {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    padding: 0.25em 0;

    .statTitle {
      font-size: 0.85em;
      line-height: 1;
      font-weight: 800;
      opacity: 0.95;
    }

    .statValue {
      line-height: 1;
      text-align: left;

      .unsafe {
        color: #841515;
      }
    }
  }
}

